Fix carousel image paths on homepage

--- a/views/partials/modal-carousel.hbs
+++ b/views/partials/modal-carousel.hbs
@@ -34,61 +34,61 @@
 
                     {{#if img01}}
                         <div class="item active">
-                            <img data-src="{{img01}}">
+                            <img data-src="{{baseDir}}{{img01}}">
                         </div>
                     {{/if}}
 
                     {{#if img02}}
                         <div class="item">
-                            <img data-src="{{img02}}">
+                            <img data-src="{{baseDir}}{{img02}}">
                         </div>
                     {{/if}}
 
                     {{#if img03}}
                         <div class="item">
-                            <img data-src="{{img03}}">
+                            <img data-src="{{baseDir}}{{img03}}">
                         </div>
                     {{/if}}
 
                     {{#if img04}}
                         <div class="item">
-                            <img data-src="{{img04}}">
+                            <img data-src="{{baseDir}}{{img04}}">
                         </div>
                     {{/if}}
 
                     {{#if img05}}
                         <div class="item">
-                            <img data-src="{{img05}}">
+                            <img data-src="{{baseDir}}{{img05}}">
                         </div>
                     {{/if}}
 
                     {{#if img06}}
                         <div class="item">
-                            <img data-src="{{img06}}">
+                            <img data-src="{{baseDir}}{{img06}}">
                         </div>
                     {{/if}}
 
                     {{#if img07}}
                         <div class="item">
-                            <img data-src="{{img07}}">
+                            <img data-src="{{baseDir}}{{img07}}">
                         </div>
                     {{/if}}
 
                     {{#if img08}}
                         <div class="item">
-                            <img data-src="{{img08}}">
+                            <img data-src="{{baseDir}}{{img08}}">
                         </div>
                     {{/if}}
 
                     {{#if img09}}
                         <div class="item">
-                            <img data-src="{{img09}}">
+                            <img data-src="{{baseDir}}{{img09}}">
                         </div>
                     {{/if}}
 
                     {{#if img10}}
                         <div class="item">
-                            <img data-src="{{img10}}">
+                            <img data-src="{{baseDir}}{{img10}}">
                         </div>
                     {{/if}}
 
